RESOLVED FIXED171002
REGRESSION (r213168): An extra Web Content process is spun up on launch and is never closed
https://bugs.webkit.org/show_bug.cgi?id=171002
Summary REGRESSION (r213168): An extra Web Content process is spun up on launch and i...
Brady Eidson
Reported 2017-04-19 12:23:55 PDT
REGRESSION (r213168): An extra Web Content process is spun up on launch and is never closed This happens in Safari and any other app that calls [WKProcessPool _warmInitialProcess] <rdar://problem/30774839>
Attachments
Patch (11.02 KB, patch)
2017-04-19 12:26 PDT, Brady Eidson
no flags
Patch (11.04 KB, patch)
2017-04-19 13:05 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2017-04-19 12:26:58 PDT
Alex Christensen
Comment 2 2017-04-19 12:40:51 PDT
Comment on attachment 307496 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=307496&action=review > Tools/TestWebKitAPI/Tests/WebKit2Cocoa/InitialWarmedProcessUsed.mm:51 > + EXPECT_EQ([pool _webProcessCount], (size_t)1); Do 1u, 1ull, or static_cast<size_t>(1) work? I don't like this c-style cast.
Brady Eidson
Comment 3 2017-04-19 13:05:09 PDT
WebKit Commit Bot
Comment 4 2017-04-19 15:43:52 PDT
Comment on attachment 307500 [details] Patch Clearing flags on attachment: 307500 Committed r215536: <http://trac.webkit.org/changeset/215536>
WebKit Commit Bot
Comment 5 2017-04-19 15:43:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.