REGRESSION (r213168): An extra Web Content process is spun up on launch and is never closed. <rdar://problem/30774839> and https://bugs.webkit.org/show_bug.cgi?id=171002

Reviewed by Alex Christensen.

Source/WebKit2:

The original change unnecessarily avoided using the initial warmed process if an explicit
data store was set on the new WKWebView.

Fixing that fixes the regression.

* UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool _webProcessCount]):
* UIProcess/API/Cocoa/WKProcessPoolPrivate.h:

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createWebPage):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/InitialWarmedProcessUsed.mm: Added.


Canonical link: https://commits.webkit.org/187941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215536 268f45cc-cd09-0410-ab3c-d52691b4dbfc